Fix DoodleJump style

--- a/public/css/widget_doodlejump.css
+++ b/public/css/widget_doodlejump.css
@@ -2,44 +2,52 @@
 
 *{box-sizing: border-box;}
 
-.container {
+
+#widget .containerOfContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#widget .container {
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
   height: 850px;
   width: 522px;
-  position: relative;
-  margin: 20px auto 0; 
   overflow: hidden;
-  margin: 0; padding: 0;
+  padding: 0;
   font-family: 'Gloria Hallelujah', cursive;
 }
 
-canvas {
+#widget canvas {
   height: 850px;
   width: 522px;
   display: block;
   background: url(http://i.imgur.com/Y0BMP.png) top left;
 }
 
-#scoreBoard {
+#widget #scoreBoard {
   width: 522px;
   height: 50px;
   background: rgba(182, 200, 220, 0.7);
   position: absolute;
-  top: -3px;
-  left: 0;
-  z-index: -1;  
+  z-index: 1;  
   border-image: url(http://i.imgur.com/5BBsR.png) 100 5 round;
 }
 
-#scoreBoard p {
+#widget #scoreBoard p {
   font-size: 20px;
   padding: 0;
   line-height: 47px;
   margin: 0px 0 0 5px;
 }
 
-img {display: none}
+#widget img {display: none}
 
-#mainMenu, #gameOverMenu {
+#widget #mainMenu, #widget #gameOverMenu {
   height: 100%;
   width: 100%;
   text-align: center;
@@ -49,22 +57,22 @@ img {display: none}
   z-index: 2;
 }
 
-#gameOverMenu {
+#widget #gameOverMenu {
   visibility: hidden;
 }
 
-h2, h3, h1 {font-weight: normal}
-h1 {
+#widget h2, #widget h3, #widget h1 {font-weight: normal}
+#widget h1 {
   font-size: 60px; 
   color: #5a5816; 
   transform: rotate(-10deg);
   margin: 0px;
 }
 
-h3 {text-align: right; margin: -10px 20px 0 0; color: #5e96be}
-h3 a {color: #5a5816}
+#widget h3 {text-align: right; margin: -10px 20px 0 0; color: #5e96be}
+#widget h3 a {color: #5a5816}
 
-.button {
+#widget .button {
   width: 105px;
   height: 31px;
   background: url(http://i.imgur.com/2WEhF.png) 0 0 no-repeat;
@@ -79,12 +87,9 @@ h3 a {color: #5a5816}
   margin-left: -53px;
 }
 
-.button.tweet {bottom: 100px; background-position: 0 -90px}
-.button.fb {bottom: 150px; background-position: 0 -60px}
+#widget .info {position: absolute; right: 20px; bottom: 00px; margin: 0; color: green}
 
-.info {position: absolute; right: 20px; bottom: 00px; margin: 0; color: green}
-
-.info .key {
+#widget .info .key {
   width: 16px;
   height: 16px;
   background: url(http://i.imgur.com/2WEhF.png) no-repeat;
@@ -92,5 +97,5 @@ h3 a {color: #5a5816}
   display: inline-block;
 }
 
-.info .key.left {background-position: -92px -621px;}
-.info .key.right {background-position: -92px -641px;}
+#widget .info .key.left {background-position: -92px -621px;}
+#widget .info .key.right {background-position: -92px -641px;}
